♻️ refactor: Simplify CourseService methods by removing unnecessary Collectors